--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-    <title>FanPage- Spurs -NoOffical</title>
+    <title>FanPage -Spurs- NoOfficial</title>
 </head>
 <body class="body-index">
 <!--Header-->
