--- a/pages/fanposts.html
+++ b/pages/fanposts.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gh3yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/cf7f6d1cb0.js" crossorigin="anonymous"> 
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
     </script>
-    <title>FanPageSpurs - Fanposts</title>
+    <title>FanPageSpurs- Fanposts</title>
 </head>
 <body>
 <!--Header-->
@@ -43,7 +43,7 @@
   <section class="seccion-fanposts-0">
     <h2>FANPOSTS</h2>
       <p>
-        Bienvenido al foro donde se podra colocar posteo puro. Utilizen los canales correspondiente. ¡Saludos!
+        Bienvenido al foro donde se podra colocar posteo puro. Sea libre de conversar/discutir tanto del equipo de los Spurs como de otro equipos a nivel mundial. Utilizen los canales correspondiente. ¡Saludos!
       </p>
   </section>
 </header>
@@ -94,7 +94,7 @@
           </div> 
     </section>
     <section class="seccion-fanposts-4">
-          <h3>EQUIPO FILIAL DE LOS SAN ANTONIO SPURS</h3>
+        <h3>EQUIPO FILIAL DE LOS SAN ANTONIO SPURS</h3>
           <div>
             <p>
               Comparta sus pensamientos tantos de los rookies, two-aways y jugadores con contrato g league.
@@ -127,19 +127,19 @@
           <h4 class="wheat mb-3">Links a las otras paginas</h4>
           <ul class="list-unstyled list-inline col-6 col-sm-4 col-lg-6  mx-auto">
             <li class="list-inline-item p-1">
-              <a href="./index.html" class="text-decoration-none righteous">HOME</a>  
+              <a href="../index.html" class="text-decoration-none righteous">HOME</a>  
             </li>
             <li class="list-inline-item p-1"> 
-              <a href="./pages/bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
+              <a href="./bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
             </li>
             <li class="list-inline-item p-1">
-              <a href="./pages/fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
+              <a href="./fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
             </li>
             <li class="list-inline-item p-1">
-              <a href="./pages/fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
+              <a href="./fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
             </li>
             <li class="list-inline-item p-1">
-              <a href="./pages/productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
+              <a href="./productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
             </li>
           </ul>  
         </div>
