--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
             <h4 class="mb-3">Contacto</h4>
             <ul class="list-unstyled list-inline">
               <li class="list-inline-item p-1">
-                <a href="#" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
+                <a href="https://www.whatsapp.com/" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="#" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
+                <a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="#" class="text-decoration-none righteous">Av. Siempre viva 123</a>
+                <a href="https://www.google.com.ar/maps/" class="text-decoration-none righteous">Av. Siempre viva 123</a>
               </li>
            </ul> 
             <div class="text-center text-md-right">
