--- a/pages/productos.html
+++ b/pages/productos.html
@@ -151,19 +151,19 @@
             <h4 class="wheat mb-3">Links a las otras paginas</h4>
             <ul class="list-unstyled list-inline col-6 col-sm-4 col-lg-6  mx-auto">
               <li class="list-inline-item p-1">
-                <a href="./index.html" class="text-decoration-none righteous">HOME</a>  
+                <a href="../index.html" class="text-decoration-none righteous">HOME</a>  
               </li>
               <li class="list-inline-item p-1"> 
-                <a href="./pages/bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
+                <a href="./bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="./pages/fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
+                <a href="./fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="./pages/fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
+                <a href="./fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="./pages/productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
+                <a href="./productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
               </li>
             </ul>  
           </div>
@@ -171,13 +171,13 @@
             <h4 class="mb-3">Contacto</h4>
             <ul class="list-unstyled list-inline">
               <li class="list-inline-item p-1">
-                <a href="#" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
+                <a href="https://www.whatsapp.com/" class="text-decoration-none righteous">N° TELEFONO: +0000000000</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="#" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
+                <a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" class="text-decoration-none righteous">CORREO: aaaaaa@email.com</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="#" class="text-decoration-none righteous">Av. Siempre viva 123</a>
+                <a href="https://www.google.com.ar/maps/" class="text-decoration-none righteous">Av. Siempre viva 123</a>
               </li>
            </ul> 
             <div class="text-center text-md-right">
