--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -41,7 +41,7 @@
       </div>
   </nav>
   <section class="contacto_titulo">
-    <h2>Siempre puedes sugerirnos</h2>
+    <h2>¿Alguna duda? Aqui en Contacto con gusto lo ayudaremos</h2>
      <p>Llena el siguiente formulario y atenderemos su sugerencia/duda/inconveniente</p>
  </section>
 </header>
@@ -52,7 +52,9 @@
   <section class="container">
     <form action="" method="POST">
       <fieldset>
-        <legend class="fs-1 fw-bold"><h3>Ponte en Contacto</h3></legend>
+        <legend>
+          <h3 class="fs-1">Ponte en Contacto</h3>
+        </legend>
         <div class="row my-5">
             <div class="form-group fs-4 mb-3">
               <label for="Nombre">Nombre:</label>
