--- a/pages/productos.html
+++ b/pages/productos.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/jpg" href="/assets/icons8-flappy-dunk-16.png">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Signika+Negative:wght@500&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -42,7 +43,7 @@
       </div>
   </nav>
   <section class="titulo-productos">
-    <h2>Bienvenidos a la seccion de productos</h2>
+    <h2>Bienvenidos a la seccion de Productos</h2>
      <p>En esta pagina podras comprar todo producto relacionados al equipo, esperemos que sea de su agrado</p>
  </section>
 </header>
