--- a/pages/fanposts.html
+++ b/pages/fanposts.html
@@ -43,7 +43,7 @@
   <section class="seccion-fanposts-0">
     <h2>FANPOSTS</h2>
       <p>
-        Bienvenido al foro donde se podra colocar posteo puro. Sea libre de conversar/discutir tanto del equipo de los Spurs como de otro equipos a nivel mundial. Utilizen los canales correspondiente. ¡Saludos!
+        Bienvenido al foro donde se podra colocar posteo puro. Utilizen los canales correspondiente. ¡Saludos!
       </p>
   </section>
 </header>
