--- a/index.html
+++ b/index.html
@@ -60,14 +60,12 @@
           <p class="parrafo_1">
             Un poco de contexto. Mi nombre es Manuel, mi relacion con el basquet empezo en la secundaria, mas exacto en 2do año. De ahi en adelante me ah ayudado bastante tanto en hacer amigos como cuidarme fisicamente. 
           </p>
-            <span>
               <figure class="figure_carlton">
                 <img src="./assets/primerIntento.gif" alt="Gif de basquet">
                 <figcaption class="figcaption_carlton">  
                   <p>Una representacion "dramatica" de mis primeros tiros al aro</p>  
                 </figcaption> 
               </figure>
-            </span>
           <p class="parrafo_1">
             A pesar de ser bajo de estatura eh podido destacar entre mis amigos por ser un buen tirador, cosa que se valora bastante en estos tiempos modernos de la nba donde por mas que uno sea alto, sin la capacidad de lanzar un tiro a larga distancia uno no puede prosperar. 
           </p>
@@ -80,14 +78,12 @@
         <p class="parrafo_2">
           Es normal que cada persona que mira basquet como en cualquier otro deporte se decante por elegir a un equipo u jugador en cual uno se
         </p class="parrafo_2"> 
-        <span>
             <figure class="figure_pasman">
             <img src="./assets/TanoFrustrado.gif" alt="Gif de alguien gritando al tv">
             <figcaption class="figcaption_pasman">  
               <p>Una representacion "dramatica" al ver a mi equipo perder</p>  
           </figcaption>
           </figure>
-        </span> 
         <p class="parrafo_2">
         insipire y cienta en su interior las ganas de apoyarlo. Aunque a veces uno termina gritando a la pantalla de TV, Computadora o Celular.
         </p>
@@ -179,33 +175,31 @@
   <footer class="pt-3 pb-4">
     <div class="container text-center text-md-left">
       <div class="row text-center text-md-left">
-        <div class="col-md-6 col-lg-6 col-xl-3 mx-auto mt-3">
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
           <h4 class="mb-4">Información</h4>
           <p class="righteous">Esta pagina se ha creado con el proposito de mostrar mis habilidades con bootstrap, espero que sea de su agrado</p>
         </div>
-        <div class="footer__linea">
+        <div class="col-md-3 col-lg-2 col-xl-3 mx-auto mt-3">
+          <h4 class="wheat mb-4">Agradecimientos</h4>
+            <p class="righteous">Gracias a todo el equipo de Coder en especial a la profe Lu y a mi tutora Abril. ¡Gracias!</p>
         </div>
-        <div class="col-md-3 col-xl-2 mx-auto mt-3">
-          <h4 class="wheat mb-4">*Proximamente*</h4>
-            <a href="#" class="text-decoration-none text-white">####</a>
-        </div>
-          <div class= "mx-auto mt-3">
+          <div class= "col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
             <h4 class="wheat mb-3">Links a las otras paginas</h4>
-            <ul class="list-unstyled list-inline col-6 col-sm-4 col-lg-6  mx-auto">
+            <ul class="list-unstyled list-inline mx-auto">
               <li class="list-inline-item p-1">
-                <a href="./index.html" class="text-decoration-none righteous">HOME</a>  
+                <a href="./index.html" class="text-decoration-none righteous"><i class="fa-solid fa-house-user px-1"></i>HOME</a>  
               </li>
               <li class="list-inline-item p-1"> 
-                <a href="./pages/bibliografia.html" class="text-decoration-none righteous">BIBLIOGRAFIA</a>
+                <a href="./pages/bibliografia.html" class="text-decoration-none righteous"><i class="fa-solid fa-book px-1"></i>BIBLIOGRAFIA</a>
+              </li>
+              <li class="list-inline-item p-1"></i>
+                <a href="./pages/fanshots.html" class="text-decoration-none righteous"><i class="fa-solid fa-camera px-1"></i>FAN-SHOTS</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="./pages/fanshots.html" class="text-decoration-none righteous">FAN-SHOTS</a>
+                <a href="./pages/fanposts.html" class="text-decoration-none righteous"><i class="fa-solid fa-pencil px-1"></i>FAN-POSTS</a>
               </li>
               <li class="list-inline-item p-1">
-                <a href="./pages/fanposts.html" class="text-decoration-none righteous">FAN-POSTS</a>
-              </li>
-              <li class="list-inline-item p-1">
-                <a href="./pages/productos.html" class="text-decoration-none righteous">PRODUCTOS</a>   
+                <a href="./pages/productos.html" class="text-decoration-none righteous"><i class="fa-solid fa-cart-shopping px-1"></i>PRODUCTOS</a>   
               </li>
             </ul>  
           </div>
@@ -241,7 +235,7 @@
           <div class="footer__linea">
           </div>
           <div class="col-m7 col-lg-12 mx-auto reservado">
-            <p>Derechos reservados por: <a href="#" class="text-decoration-none">Manuel Arias</a></p>
+            <p>Derechos reservados por: <a href="https://github.com/Arias-Manuel" class="text-decoration-none">Manuel Arias</a></p>
         </div>
       </div>
     </div>
