--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
     <form action="" method="POST">
       <fieldset>
         <legend>
-          <h3 class="fs-1">Ponte en Contacto</h3>
+          <h3>Ponte en Contacto</h3>
         </legend>
         <div class="row my-5">
             <div class="form-group fs-4 mb-3">
